# droponoff

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  REQUIREMENTS.md
.github/workflows/: ci.yml
src/: discovery.rs  extensions.rs  finder.rs  launchagent.rs  logging.rs  main.rs  processes.rs  status.rs  sudo.rs
